--- a/style.css
+++ b/style.css
@@ -1,122 +1,140 @@
-html,body{
-    padding:0;
-    margin:0;
+html,
+body {
+  padding: 0;
+  margin: 0;
 }
 
-div{
-    padding:0;
-    margin:0;
+div {
+  padding: 0;
+  margin: 0;
 }
 
-.icon{
-    display: inline-block;
-    vertical-align: middle;
-    width:20px;
-    height:20px;
-    cursor: pointer;
-    padding: 0 5px
+.icons {
+  padding: 10px;
+  text-align: center;
+  user-select: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-.icon img{
-    width:100%;
-    height:100%;
+.icon {
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  padding: 0 15px;
 }
 
-#wrong{
-    width: 200px;
-    text-align: center;
-    font-size: 15px;
-    line-height:25px;
-    margin: 10px;
+.icon img {
+  width: 100%;
+  height: 100%;
 }
 
-#wrong span{
-    font-size: 12px;
-    color: rgb(119, 119, 119)
-
+#wrong {
+  width: 200px;
+  text-align: center;
+  font-size: 15px;
+  line-height: 25px;
+  margin: 10px;
 }
 
-#main{
-    width: 200px;
-    text-align: center;
-    font-size: 12px;
-    line-height:18px
+#wrong span {
+  font-size: 12px;
+  color: rgb(119, 119, 119);
 }
 
-#main-title{
-    text-align: center;
-    padding:10px;
-    background-color: #F89F1B;
-    font-size: 20px;
-    box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.541);
-    user-select: none;
+#main {
+  width: 200px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 18px;
 }
 
-#checkboxs{
-    padding:10px;
-    text-align: center;
+#main-title {
+  text-align: center;
+  padding: 10px;
+  background-color: #f89f1b;
+  font-size: 20px;
+  box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.541);
+  user-select: none;
 }
 
-#personal{
-    padding-left:20px;
-    text-align: left;
+#checkboxs {
+  padding: 10px;
+  text-align: center;
 }
 
-#downloads{
-    height:fit-content;
+#personal {
+  padding-left: 20px;
+  text-align: left;
 }
 
-#message{
-    width:100%;
-    height:18px;
-    font-size: 14px;
-    line-height:18px;
-    color: rgb(110, 150, 112);
-    font-style: italic;
-    background-color: rgb(211, 255, 198);
-    display: none;
-
+#downloads {
+  height: fit-content;
 }
 
-
-.btn{
-    display: inline-block;
-    vertical-align: middle;
-    padding:0;
-    margin:0px;
-    width:100%;
-    height:40px;
-    text-align: center;
-    cursor: pointer;
-    user-select: none;
+@keyframes msg {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-.btn p{
-    margin-top:12px;
-    margin-right: 0;
-    text-align: center;
+.message {
+  position: absolute;
+  width: 100%;
+  height: 39px;
+  bottom: 0;
+  font-size: 14px;
+  line-height: 39px;
+  color: rgb(55, 83, 56);
+  font-style: bold;
+  background-color: rgb(211, 255, 198);
+  display: none;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+  animation: msg 150ms ease-in-out;
 }
 
-.red{
-    color: rgb(151, 151, 151);
-    background-color: rgb(78, 73, 65);
-    transition: all 0.2s;
+.btn {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0;
+  margin: 0px;
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
 }
 
-.red:hover{
-    color: white;
-    background-color: rgb(122, 119, 113);
-    transition: all 0.2s;
+.btn p {
+  margin-top: 12px;
+  margin-right: 0;
+  text-align: center;
 }
 
-.yellow{
-    color: rgb(68, 68, 68);
-    background-color: rgb(255, 226, 189);
-    transition: all 0.2s;
+.red {
+  color: rgb(151, 151, 151);
+  background-color: rgb(78, 73, 65);
+  transition: all 0.2s;
 }
 
-.yellow:hover{
-    color: black;
-    background-color: rgb(255, 212, 155);
-    transition: all 0.2s;
+.red:hover {
+  color: white;
+  background-color: rgb(122, 119, 113);
+  transition: all 0.2s;
+}
+
+.yellow {
+  color: rgb(68, 68, 68);
+  background-color: rgb(255, 226, 189);
+  transition: all 0.2s;
+}
+
+.yellow:hover {
+  color: black;
+  background-color: rgb(255, 212, 155);
+  transition: all 0.2s;
 }
